tests/NormalTests/paczka1/fuzzy1/55165971.err
Error in line 1: rSdpsMPa6cc S659 97,1
Error in line 4: luWq50DwwB S659 15,71
Error in line 2: KsVt9vSPz S169 46,2
Error in line 16: KsVt9vSPz A19 246,1
Error in line 27: S169 A19 53,4
Error in line 34: B0tNuvE5c S659 64,41
Error in line 22: luWq50DwwB A19 13,7
Error in line 35: luWq50DwwB S169 12,6
